unpackaged/main/default/objects/Rol_Venta__c/Rol_Venta__c.object-meta.xml
<CustomObject>
    <label>Rol de Venta</label>
    <nameField>
        <displayFormat>RV-{0000000000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles de Venta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>