unpackaged/main/default/objects/Rol_Venta__c/fields/Colaborador_Javer__c.field-meta.xml
<CustomField>
    <fullName>Colaborador_Javer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colaborador Javer</label>
    <referenceTo>Colaborador_Javer__c</referenceTo>
    <relationshipLabel>Roles de Venta</relationshipLabel>
    <relationshipName>Roles_de_Venta</relationshipName>
    <type>Lookup</type>
</CustomField>