unpackaged/main/default/objects/Rol_Venta__c/fields/Fecha_Asignacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Asignacion__c</fullName>
    <label>Fecha Asignación</label>
    <type>Date</type>
</CustomField>