unpackaged/main/default/objects/Rol_Venta__c/fields/Fecha_Hora_Asignacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora_Asignacion__c</fullName>
    <label>Fecha Hora Asignación</label>
    <type>DateTime</type>
</CustomField>