unpackaged/main/default/objects/Rol_Venta__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Roles de Venta</relationshipLabel>
    <relationshipName>Roles_de_Venta</relationshipName>
    <type>Lookup</type>
</CustomField>