unpackaged/main/default/objects/Rol_Venta__c/fields/Llave__c.field-meta.xml
<CustomField>
    <fullName>Llave__c</fullName>
    <description>Id rol de venta + Id cuenta + Id fraccionamiento</description>
    <externalId>true</externalId>
    <label>Llave</label>
    <length>70</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>