unpackaged/main/default/objects/Rol_Venta__c/fields/Rol_Venta__c.field-meta.xml
<CustomField>
    <fullName>Rol_Venta__c</fullName>
    <label>Rol de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AS</fullName>
                <label>Asesor</label>
            </value>
            <value>
                <fullName>PR</fullName>
                <label>Prospectador</label>
            </value>
            <value>
                <fullName>LP</fullName>
                <label>Lead Profiler</label>
            </value>
            <value>
                <fullName>CJ</fullName>
                <label>Colaborador Javer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>