unpackaged/main/default/objects/Rol_Venta__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Roles_de_Venta</relationshipName>
    <type>Lookup</type>
</CustomField>