unpackaged/main/default/objects/Rol_Venta__c/fields/Vencido__c.field-meta.xml
<CustomField>
    <fullName>Vencido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vencido</label>
    <type>Checkbox</type>
</CustomField>